examples/guestbook-front.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: guestbook-front
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: guestbook
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 100.64.0.0/10
  - ports:
    - protocol: TCP
      port: 3000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
          role: master
  - ports:
    - protocol: TCP
      port: 6379
  policyTypes:
  - Ingress
  - Egress
